--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ td, th {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: black;
+  color: white;
 }
 
 .routetxt {
