--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,11 @@ a {
 
 body {
   margin: 0;
+  margin-top: 5%;
   display: flex;
-  place-items: center;
+  /*place-items: center;*/
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 80vh;
   background-color: white;
 }
 
