--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin-left: 15%;
+  margin-right: 15%;
   /*padding: 2rem;
   /*text-align: center;*/
 }
